force-app/main/default/objects/E_MOC_Application__c.object
<CustomObject>
    <fields>
        <fullName>APC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_by_FN_closeout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action by FN closeout</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_Application2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_by_MOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action by MOC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_ApplicationVZXJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_by_Maintenance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action by Maintenance</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_Application9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_by_Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action by Operation</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_Application8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_by_PSSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_ApplicationWrnJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_by_Technologist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action by Technologist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_Application7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_by_deviated_form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action by deviated form</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_ApplicationWV5j</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_by_return_to_normal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_ApplicationL8aw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_by_risk_analysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action by risk analysis</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_ApplicationWS0E</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_by_risk_analysis_text__c</fullName>
        <formula>Action_by_risk_analysis__r.FirstName &amp;&quot; &quot;&amp; Action_by_risk_analysis__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action by risk analysis text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Cooled_Exchangers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Air Cooled Exchangers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alarm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alarm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_closed_sub_order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All closed sub-order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_1_ASM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval #1 ASM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_1_Electrical_Duty_Engineer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval #1 Electrical Duty Engineer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_1_Engineer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval #1 Engineer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_1_Instrument_Duty_Engineer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval #1 Instrument Duty Engineer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_1_Mechanical_Duty_Engineer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval #1 Mechanical Duty Engineer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_2_ASM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval #2 ASM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_2_SM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval #2 SM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <formula>Functional_Location__r.Functional_Location_Area__c</formula>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assets_Likelihood_Final__c</fullName>
        <label>Assets Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Improbable</fullName>
                </value>
                <value>
                    <fullName>B - Unlikely</fullName>
                </value>
                <value>
                    <fullName>C - Possible</fullName>
                </value>
                <value>
                    <fullName>D - Likely</fullName>
                </value>
                <value>
                    <fullName>E - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assets_Likelihood__c</fullName>
        <label>Assets Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Improbable</fullName>
                </value>
                <value>
                    <fullName>B - Unlikely</fullName>
                </value>
                <value>
                    <fullName>C - Possible</fullName>
                </value>
                <value>
                    <fullName>D - Likely</fullName>
                </value>
                <value>
                    <fullName>E - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assets_RAM_Final__c</fullName>
        <label>Assets RAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assets_RAM__c</fullName>
        <label>Assets RAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assets_Remark_Final__c</fullName>
        <label>Assets Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assets_Remark__c</fullName>
        <label>Assets Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assets_Severity_Final__c</fullName>
        <label>Assets Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - No damage</fullName>
                </value>
                <value>
                    <fullName>1 - Slight damage &lt;= 10 KUSD</fullName>
                </value>
                <value>
                    <fullName>2 - Minor damage 10-100 KUSD</fullName>
                </value>
                <value>
                    <fullName>3 - Localised damage 0.1-1 MUSD</fullName>
                </value>
                <value>
                    <fullName>4 - Major damage 1-10 MUSD</fullName>
                </value>
                <value>
                    <fullName>5 - Extensive damage &gt; 10 MUSD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assets_Severity__c</fullName>
        <label>Assets Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - No damage</fullName>
                </value>
                <value>
                    <fullName>1 - Slight damage &lt;= 10 KUSD</fullName>
                </value>
                <value>
                    <fullName>2 - Minor damage 10-100 KUSD</fullName>
                </value>
                <value>
                    <fullName>3 - Localised damage 0.1-1 MUSD</fullName>
                </value>
                <value>
                    <fullName>4 - Major damage 1-10 MUSD</fullName>
                </value>
                <value>
                    <fullName>5 - Extensive damage &gt; 10 MUSD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assets__c</fullName>
        <formula>&quot;M&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assets</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Category_1_Text__c</fullName>
        <formula>Assigned_To_Category_1__r.FirstName &amp;&quot; &quot;&amp; Assigned_To_Category_1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Category 1 Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Category_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_Application3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Category_2_Text__c</fullName>
        <formula>Assigned_To_Category_2__r.FirstName &amp;&quot; &quot;&amp; Assigned_To_Category_2__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Category 2 Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Category_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_Application5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Category_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_Application6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To_QA_QC_Text__c</fullName>
        <formula>Assigned_To_QA_QC__r.FirstName &amp;&quot; &quot;&amp; Assigned_To_QA_QC__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To QA QC Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_QA_QC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_Application4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_layer_control_DCS_PLC_TAS_TAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Base layer control (DCS), PLC, TAS/TAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Estimate_Final__c</fullName>
        <label>Budget Estimate Final</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Estimate_Initial__c</fullName>
        <label>Budget Estimate Initial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Type__c</fullName>
        <label>Budget Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Buildling_and_Road__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buildling and Road</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CATEGORY_1_Form__c</fullName>
        <defaultValue>&apos;https://thaioilintranet.thaioilgroup.com/sites/ISODocument/ISO/ISODocument/Form/Qmtssfr09_Pre%20Start%20up%20Safety%20Review%20(PSSR)%20Category%201%20checklist%20(CAPEX%20Project%20or%20Process%20Modify%20or%20Process%20Revamp).docx?Web=1&apos;</defaultValue>
        <label>CATEGORY-1 Form</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CATEGORY_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CATEGORY-1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CATEGORY_2_Form__c</fullName>
        <defaultValue>&apos;https://thaioilintranet.thaioilgroup.com/sites/ISODocument/ISO/ISODocument/Form/Qmtssfr10-1_Pre%20Startup%20Safety%20Review%20(PSSR)%20Category%202%20checklist%20(Major%20Minor%20Turnaround%20and%20Restart%20of%20an%20Idled%20Preserved%20Asset).DOCX?Web=1&apos;</defaultValue>
        <label>CATEGORY-2 Form</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CATEGORY_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CATEGORY-2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CATEGORY_3_Form__c</fullName>
        <defaultValue>&apos;https://thaioilintranet.thaioilgroup.com/sites/ISODocument/ISO/_layouts/15/WopiFrame2.aspx?sourcedoc=%7B87AA75B9-6279-474D-9801-7173021D7B6C%7D&amp;file=Qmtssfr11_Pre%20start%20up%20safety%20Review%20(PSSR)%20Category%203%20checklist%20(Uncontrolled%20shutdown%20with%20no%20process%20safety%20consequence).docx&amp;action=default&apos;</defaultValue>
        <label>CATEGORY-3 Form</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CATEGORY_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CATEGORY-3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPM_CAPEX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPM (CAPEX)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Called_FN_APU_Approval_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Called FN APU Approval Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Called_FN_VP_Approval_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Called FN VP Approval Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Called_Risk_Approval_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Called Risk Approval Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Catalyst_Adsorbent_Chemical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Catalyst / Adsorbent / Chemical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Catalyst_Chemical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Catalyst &amp; Chemical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Type__c</fullName>
        <label>Category Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <description>Change Type (Permanent, Temporary)</description>
        <label>Change Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Civil_change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Civil change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clearance_Number_Final_Group_C__c</fullName>
        <label>Clearance Number-Final Group C</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clearance_Number_Final__c</fullName>
        <label>Clearance Number-Final Group AB</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clearance_Number__c</fullName>
        <label>Clearance Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Common_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Common Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>(e.g. talk-back, CCTV, radio, public announce and telecomunication network)</inlineHelpText>
        <label>Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_date__c</fullName>
        <label>Required Completion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Approval_ENMx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concept Approval-ENMx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Approval_MROx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concept Approval-MROx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Approval_TNPx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concept Approval-TNPx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consequence_of_Failure_on_Demand__c</fullName>
        <label>Consequence of Failure on Demand</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Control_valve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Control valve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deferral_PM_MTA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deferral (PM+MTA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demolition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demolition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department_Resp__c</fullName>
        <formula>Requestor_Name__r.ORG_ID__c</formula>
        <label>Department Resp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <defaultValue>&quot;MOC&quot;</defaultValue>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_change__c</fullName>
        <label>Description of change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Intent__c</fullName>
        <label>Design Intent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_limit_IOW_change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design limit + IOW change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deviate_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deviate Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deviation_Form__c</fullName>
        <defaultValue>&apos;https://thaioilintranet.thaioilgroup.com/sites/ISODocument/ISO/ISODocument/Form/QMTS-SFR-18_Thaioil%20Deviation%20Form%20for%20TA.docx?Web=1&apos;</defaultValue>
        <label>Deviation Form</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diff_ADOE_Verify_Submit_to_ADOE__c</fullName>
        <formula>Today () -  Stamp_date_Submit_to_ADOE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff(ADOE Verify -Submit to ADOE )</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_ADOE_Verify__c</fullName>
        <formula>IF( AND( ISPICKVAL(Status_Common_Workflow__c,&quot;Close Out&quot; ) , Send_to_MROx__c = false ) , IF( Diff_ADOE_Verify_Submit_to_ADOE__c &gt; 5, true, false), false)</formula>
        <label>Diff ADOE Verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_APU_Approval_TA2s_review__c</fullName>
        <formula>Today() - Stamp_date_TA2s_review__c</formula>
        <label>Diff(APU Approval-TA2s review)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_APU_Approval_technical_review__c</fullName>
        <formula>Stamp_date_APU_Approval__c - Stamp_date_technical_review__c</formula>
        <label>Diff(APU Approval-technical review)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_APU_TA_FN__c</fullName>
        <formula>IF( ISPICKVAL( Status_Functional_Override__c , &quot;Approval #3 (APU)&quot;) ,  Stamp_date_Approval_APU__c &gt; End_date__c  , false)</formula>
        <label>Diff(APU - TA)FN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_Approval_2__c</fullName>
        <formula>IF( ISPICKVAL( Status_Functional_Override__c , &quot;Approval #2&quot;) , IF( Diff_Today_Approval2FN__c &gt; 3,true, false) , false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff Approval#2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_Approval_APU_Technical_review__c</fullName>
        <formula>Stamp_date_Approval_APU__c -  Stamp_date_FN_Technical_review__c</formula>
        <label>Diff(Approval(APU)-Technical review)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_Approval_APU_end_date__c</fullName>
        <formula>IF( ISPICKVAL( Status_Functional_Override__c , &quot;Approval #3 (APU)&quot;) ,  IF( TODAY() &gt;  End_date__c , true, false) , false)</formula>
        <label>Diff(Approval APU-end date)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_Approval_VP_Approval_APU__c</fullName>
        <formula>Stamp_date_Approval_VP__c -  Stamp_date_Approval_APU__c</formula>
        <label>Diff(Approval(VP)-Approval(APU))</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_Approval_VP_end_date__c</fullName>
        <formula>IF( ISPICKVAL( Status_Functional_Override__c , &quot;Approval #3 (VP)&quot;) , IF( TODAY() &gt; End_date__c , true, false) , false)</formula>
        <label>Diff(Approval VP-end date)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_Closed_MOC_verify__c</fullName>
        <formula>Today() -  Stamp_date_MOC_verify__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff(Closed-MOC verify)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_Implementation2_FN_Approval_VP__c</fullName>
        <formula>Stamp_date_FN_Implementation2__c  -  Stamp_date_Approval_VP__c</formula>
        <label>Diff(Implementation2(FN)-Approval(VP))</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_Implementation_VP_Approval__c</fullName>
        <formula>TODAY() - Stamp_date_VP_Approval__c</formula>
        <label>Diff(Implementation-VP Approval)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_Implementation_VP__c</fullName>
        <formula>IF( ISPICKVAL( Status_Common_Workflow__c , &quot;VP Approval&quot;)  ,IF( RAM_Total__c  =&quot;H&quot;,  IF( Diff_Implementation_VP_Approval__c  &gt; 1, true, false) ,  IF( RAM_Total__c = &quot;M&quot;,  IF( Diff_Implementation_VP_Approval__c &gt; 3, true, false) ,  IF( RAM_Total__c = &quot;L&quot;,  IF(Diff_Implementation_VP_Approval__c &gt; 5, true, false) ,IF( RAM_Total__c = &quot;L/N&quot;,IF(Diff_Implementation_VP_Approval__c &gt; 5, true , false), false ) ) )) , false)</formula>
        <label>Diff(Implementation-VP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_Implementation_end_date__c</fullName>
        <formula>IF( ISPICKVAL( Status_Functional_Override__c , &quot;Implementation#2&quot;) , IF( TODAY() &gt; End_date__c , true, false) , false)</formula>
        <label>Diff(Implementation-end date)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_MOC_verify_ADOE_Verify__c</fullName>
        <formula>Today() -  Stamp_date_ADOE_Verify__c</formula>
        <label>Diff(MOC verify-ADOE Verify)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_MOC_verify__c</fullName>
        <formula>IF(  AND(ISPICKVAL( Status_Common_Workflow__c , &quot;Close Out&quot;),ISNULL(Stamp_date_MOC_verify__c) )  , IF( Diff_MOC_verify_ADOE_Verify__c &gt; 5, true, false), false)</formula>
        <label>Diff MOC verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_Main_order_closed_close_out__c</fullName>
        <formula>TODAY()  -  Stamp_date_close_out__c</formula>
        <label>Diff(Main order closed-close out )</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_Mainorder_closed__c</fullName>
        <formula>IF (AND(ISPICKVAL( Status_Common_Workflow__c ,&quot;Close Out&quot;), Main_order_is_closed__c = false) , IF(  Diff_Main_order_closed_close_out__c  &gt; 15 , true,   false),false)</formula>
        <label>Diff Mainorder closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_Next_status_checkbox_confirmed__c</fullName>
        <formula>TODAY() -  stamp_date_check_confirmed_or_QA_QC__c</formula>
        <label>Diff(Next status-checkbox confirmed)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_Read_Implement__c</fullName>
        <formula>IF( ISPICKVAL( Status_Common_Workflow__c , &quot;Implementation&quot;) , IF( RAM_Total__c  = &quot;H&quot; ,  IF( Diff_readiness_review_Implementation__c &gt; 10, true, false) ,  IF(RAM_Total__c = &quot;M&quot;,  IF(Diff_readiness_review_Implementation__c &gt; 20, true, false) ,  IF( RAM_Total__c =&quot;L&quot;,  IF(Diff_readiness_review_Implementation__c &gt; 30, true, false) ,  IF(RAM_Total__c = &quot;L/N&quot;,  IF(Diff_readiness_review_Implementation__c &gt; 30, true, false) , false) ) ) ), false)</formula>
        <label>Diff(Read-Implement)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_Readiness_PSSR_Select__c</fullName>
        <formula>IF( AND(ISPICKVAL ( Status_Common_Workflow__c ,&quot;Readiness Review&quot;), AND( CATEGORY_1__c = false , CATEGORY_2__c = false ,  QA_QC__c = false) ) ,  IF( Diff_Readiness_checkbox__c &gt; 1, true, false) , false)</formula>
        <label>Diff Readiness PSSR Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_Readiness_PSSR_approve__c</fullName>
        <formula>IF(ISPICKVAL(  Status_Common_Workflow__c,&quot;Readiness Review&quot;) ,IF(  RAM_Total__c  =&quot;H&quot;,  IF( Diff_Next_status_checkbox_confirmed__c &gt; 1, true, false) ,  IF( RAM_Total__c =&quot;M&quot;,  IF(Diff_Next_status_checkbox_confirmed__c &gt; 2,True, false) ,  
	IF( RAM_Total__c =&quot;L&quot;,  IF(Diff_Next_status_checkbox_confirmed__c &gt; 3, true, false) ,  IF( RAM_Total__c =&quot;L/N&quot;,  IF(Diff_Next_status_checkbox_confirmed__c &gt; 3, true, false) , false) ) ) ),false)</formula>
        <label>Diff Readiness PSSR approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_Readiness_PSSR_review__c</fullName>
        <formula>IF(  AND(ISPICKVAL( Status_Common_Workflow__c , &quot;Readiness Review&quot;),  AND(I_have_confirmed_already_upload_PSSR__c = false,Has_QA_QC_checklist__c=false)  )  , IF(  RAM_Total__c  = &quot;H&quot;,  IF( Diff_checkbox_confirmed_check_PSSR__c &gt; 3 , True, False ) ,  IF( RAM_Total__c =&quot;M&quot;, IF(Diff_checkbox_confirmed_check_PSSR__c &gt; 5, true, false)  ,  IF( RAM_Total__c =&quot;L&quot;,  IF(Diff_checkbox_confirmed_check_PSSR__c &gt; 10, True , false) , IF( RAM_Total__c =&quot;L/N&quot;,  IF(Diff_checkbox_confirmed_check_PSSR__c &gt; 10, true, false) , false)) )  ), false)</formula>
        <label>Diff Readiness PSSR review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_Readiness_checkbox__c</fullName>
        <formula>TODAY()  - Stamp_date_readiness_review__c</formula>
        <label>Diff(Readiness-checkbox)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_TA2s_review__c</fullName>
        <formula>IF(ISPICKVAL( Status_Common_Workflow__c ,&quot;Technical Review&quot; ) ,  IF(  Diff_APU_Approval_TA2s_review__c  &gt; 5 , true, false) , false)</formula>
        <label>Diff TA2s review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_TA2s_technical__c</fullName>
        <formula>TODAY() -  Stamp_date_technical_review__c</formula>
        <label>Diff(TA2s- technical)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_TA_MOC_review__c</fullName>
        <formula>IF (AND( ISPICKVAL( Status_Common_Workflow__c ,&quot;Technical Review&quot;),Show_Technical_review_by_MOC__c = false) ,  IF( RAM_Total__c = &quot;H&quot;, IF(  Diff_TA2s_technical__c &gt; 3, true, false) ,  IF( OR(RAM_Total__c = &quot;M&quot;,RAM_Total__c = &quot;L&quot;,RAM_Total__c = &quot;L/N&quot;) , IF(Diff_TA2s_technical__c &gt; 5, true, false) , false) ) , false)</formula>
        <label>Diff TA MOC review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_Today_Approval2FN__c</fullName>
        <formula>TODAY() -  Stamp_date_Approval2_FN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff(Today-Approval2FN)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_Trigger_Implement__c</fullName>
        <formula>IF( AND(ISPICKVAL( Status_Common_Workflow__c , &quot;Implementation&quot;), Order_Trigger__c = false)  , 
IF( RAM_Total__c  = &quot;H&quot; ,  IF(  Diff_order_trigger_Implementation__c  &gt; 2, true, false) ,  IF(RAM_Total__c = &quot;M&quot;,  IF(Diff_order_trigger_Implementation__c  &gt; 3, true, false) ,  IF( RAM_Total__c =&quot;L&quot;,  IF(Diff_order_trigger_Implementation__c  &gt; 5, true, false) ,  IF(RAM_Total__c = &quot;L/N&quot;,  IF(Diff_order_trigger_Implementation__c  &gt; 5 , true, false) , false) ) ) ), false)</formula>
        <label>Diff(Trigger-Implement)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_VP_APU_FN__c</fullName>
        <formula>IF( ISPICKVAL( Status_Functional_Override__c ,&quot;Approval #3 (VP)&quot; ) ,  Stamp_date_Approval_VP__c &gt;  End_date__c ,false)</formula>
        <label>Diff(VP-APU)FN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_VP_APU__c</fullName>
        <formula>IF( ISPICKVAL( Status_Common_Workflow__c , &quot;APU Approval&quot;) , IF( RAM_Total__c  =&quot;H&quot;,  IF( Diff_VP_Approval_APU_Approval__c &gt; 1, true, false) ,  IF( RAM_Total__c = &quot;M&quot;,  IF( Diff_VP_Approval_APU_Approval__c &gt; 3, true, false) ,  IF( RAM_Total__c = &quot;L&quot;,  IF(Diff_VP_Approval_APU_Approval__c &gt; 5, true, false) ,IF(RAM_Total__c = &quot;L/N&quot;,IF(Diff_VP_Approval_APU_Approval__c &gt; 5, true , false), false ) ) )), false)</formula>
        <label>Diff(VP - APU)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_VP_Approval_APU_Approval__c</fullName>
        <formula>TODAY() -  Stamp_date_APU_Approval__c</formula>
        <label>Diff(VP Approval-APU Approval)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_checkbox_confirmed_check_PSSR__c</fullName>
        <formula>TODAY() - stamp_date_checkbox_PSSR_QAQC__c</formula>
        <label>Diff(checkbox confirmed-check PSSR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_close_out_readiness_review__c</fullName>
        <formula>Stamp_date_close_out__c -  Stamp_date_readiness_review__c</formula>
        <label>Diff(close out-readiness review)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>